--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Parallax - Jérémy BOUNY</title>
+		<title>RunRun - Jérémy BOUNY</title>
 		<link href="assets/css/style.css" rel="stylesheet">
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="mobile-web-app-capable" content="yes" />
