Update the terrain-generator version. Use Mersenne Twister for all pseudo random generation. Add a screenshot.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		<script src="assets/libs/terraingen/mountains2.js"></script>
 		<script src="assets/libs/terraingen/perlinnoise.js"></script>
 		<script src="assets/libs/terraingen/terraingen.js"></script>
+		<script src="assets/libs/terraingen/mersenne-twister.js"></script>
 		
 		<script src="assets/js/window.js"></script>
 		<script src="assets/js/game/game.js"></script>
