--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<script src="assets/libs/jquery.min.js"></script>
 		<script src="assets/libs/three.min.js"></script>
 		<script src="assets/libs/three/OrbitControls.js"></script>
+		<script src="assets/libs/three/water-material.js"></script>
 		<script src="assets/libs/RequestAnimationFrame.js"></script>
 		<script src="assets/libs/box2d.js"></script>
 		
