Work on an infinite terrain. The terrain is continually generated during the game. The implementation permits here to generate terrain, trees and cows but need some improvements.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 		<script src="assets/js/game/game.js"></script>
 		<script src="assets/js/game/display.js"></script>
 		<script src="assets/js/game/meshes.js"></script>
+		<script src="assets/js/game/terrain.js"></script>
 		<script src="assets/js/main.js"></script>
 	</body>
 </html>
